--- a/index.html
+++ b/index.html
@@ -1809,9 +1809,7 @@ var input = document.querySelector('input[name=tags3]'),
         },
         templates: {
             dropdownItemNoMatch: function(data) {
-                return `<div class='${this.settings.classNames.dropdownItem}' value="noMatch" tabindex="0" role="option">
-                    No suggestion found for: <strong>${data.value}</strong>
-                </div>`
+                return `<div class='${this.settings.classNames.dropdownItem}' value="noMatch" tabindex="0" role="option">No suggestion found for: <strong>${data.value}</strong></div>`
             }
         }
     })
