added `Tagify.logger.enabled = true;` to all test files and main demos page

--- a/index.html
+++ b/index.html
@@ -162,6 +162,8 @@
         <script src="https://unpkg.com/@yaireo/dragsort"></script>
 
         <script>
+            Tagify.logger.enabled = true;
+
             var isIE = !document.currentScript;
 
             function renderPRE(currentScript, codeScriptName){
