--- a/test/dragsort.html
+++ b/test/dragsort.html
@@ -42,6 +42,8 @@
         <input name='tags' placeholder='user input' value='foo, very long tag, bar, baz, and another long'>
 
 <script>
+Tagify.logger.enabled = true;
+
 (() => {
 var inputElm = document.querySelector('input[name=tags]')
 
