--- a/test/easy-to-customize.html
+++ b/test/easy-to-customize.html
@@ -105,6 +105,8 @@
     </section>
 
 <script>
+    Tagify.logger.enabled = true;
+
 // generate random whilist items (for the demo)
 var randomStringsArr = Array.apply(null, Array(100)).map(function() {
     return Array.apply(null, Array(~~(Math.random() * 10  + 3))).map(function() {
