--- a/test/test2.html
+++ b/test/test2.html
@@ -42,7 +42,9 @@
     </section>
 
 <script>
-    // generate random whilist items (for the demo)
+Tagify.logger.enabled = true;
+
+// generate random whilist items (for the demo)
 var input = document.querySelector('input'),
     button = input.nextElementSibling,  // "add new tag" action-button
     tagify = new Tagify(input, {
