--- a/test/textarea.html
+++ b/test/textarea.html
@@ -47,6 +47,8 @@ and [[{"value": "readonly", "readonly":true}]]
 
 
 <script>
+Tagify.logger.enabled = true;
+
 document.forms[0].reset()
 
 function delay(ms) {
