--- a/test/users-list.html
+++ b/test/users-list.html
@@ -155,6 +155,8 @@
 
 
 <script>
+Tagify.logger.enabled = true;
+
 var inputElm = document.querySelector('input[name=users-list-tags]');
 
 function tagTemplate(tagData){
