--- a/test/validate.html
+++ b/test/validate.html
@@ -44,6 +44,8 @@
         </form>
 
 <script>
+Tagify.logger.enabled = true;
+
 var input = document.querySelector('input')
 
 var tagify = new Tagify(input, {
