fixed a minor issue in the "Easy to customize" demo section, where edited tag's text was breaking into a new line due to CSS pushing the X button over it

--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
   display: none;
 }
 
-.customLook .tagify__tag__removeBtn{
+.customLook :not(.tagify__tag--editable) .tagify__tag__removeBtn{
   opacity: 0;
   transform: translateX(-6px) scale(.5);
   margin-left: -3ch;
