Removed all occurrences of the deprecated `Tagify.logger.enabled`

--- a/test/basic.html
+++ b/test/basic.html
@@ -60,8 +60,6 @@
 
 
 <script>
-Tagify.logger.enabled = true;
-
 (() => {
 var inputElm = document.querySelector('input[name=tags-regular]')
 
@@ -113,6 +111,9 @@ setTimeout(() => {
     tagify.setDisabled(false)
 }, 500);
 
+function updatePlaceholder() {
+
+}
 
 })()
 </script>
