--- a/index.html
+++ b/index.html
@@ -653,12 +653,11 @@
   --tag-hover               : #CE0078;
   --tag-text-color          : #FFF;
   --tags-border-color       : silver;
-  --tag-border-radius       : 25px;
   --tag-text-color--edit    : #111;
   --tag-remove-bg           : var(--tag-hover);
-  --tag-remove-btn-color    : white;
   --tag-pad                 : .6em 1em;
-  --tag-inset-shadow-size   : 1.35em;
+  --tag-inset-shadow-size   : 1.4em; /* compensate for the larger --tag-pad value */
+  --tag-remove-btn-color    : white;
   --tag-remove-btn-bg--hover: black;
 
   display: inline-block;
@@ -670,22 +669,30 @@
   margin-top: 0;
 }
 
+.customLook .tagify__tag > div{
+  border-radius: 25px;
+}
+
+.customLook .tagify__tag:not(:only-of-type):not(.tagify__tag--editable):hover .tagify__tag-text{
+  margin-inline-end: -1px;
+}
+
 /* Do not show the "remove tag" (x) button when only a single tag remains */
 .customLook .tagify__tag:only-of-type .tagify__tag__removeBtn{
   display: none;
 }
 
-.customLook :not(.tagify__tag--editable) .tagify__tag__removeBtn{
+.customLook .tagify__tag__removeBtn{
   opacity: 0;
-  transform: translateX(-6px) scale(.5);
-  margin-left: -3ch;
+  transform: translateX(-100%) scale(.5);
+  margin-inline: -20px 6px; /* very specific on purpose  */
+  text-align: right;
   transition: .12s;
 }
 
-.customLook .tagify__tag:hover .tagify__tag__removeBtn{
+.customLook .tagify__tag:not(.tagify__tag--editable):hover .tagify__tag__removeBtn{
   transform: none;
   opacity: 1;
-  margin-left: -1ch;
 }
 
 .customLook + button{
