bugfix - when tags are styles to render "outside" of the tagify component, the dropdown should not be visisble when clicking outside the input box

--- a/index.html
+++ b/index.html
@@ -1749,6 +1749,7 @@ var input = document.querySelector('input[name=tags-outside]')
 // init Tagify script on the above inputs
 var tagify = new Tagify(input, {
   whitelist: ["foo", "bar", "baz"],
+  focusable: false,
   dropdown: {
     position: "input",
     enabled : 0 // always opens dropdown when input gets focus
