--- a/test/scroll-tracking.html
+++ b/test/scroll-tracking.html
@@ -7,7 +7,7 @@
         <meta name="author" content="Yair Even-Or">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="../dist/tagify.css">
-        <script src="../dist/tagify.min.js"></script>
+        <script src="../dist/tagify..js"></script>
 
         <style>
             body{ font: 16px Arial; background:#CCC; }
