replaced `tagify.min.js` script in `index.html` examples page to `tagify.js`

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 }
             }(document)
         </script>
-        <script src="dist/tagify.min.js"></script>
+        <script src="dist/tagify.js"></script>
         <script src="https://unpkg.com/@yaireo/dragsort"></script>
 
         <script>
