--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
 }
 
 .tags-look .tagify__dropdown__item--active{
-  color: black;
+  border-color: black;
 }
 
 .tags-look .tagify__dropdown__item:hover{
