fixed `tagify.js` file-path after recent search & replace mistake

--- a/test/dragsort.html
+++ b/test/dragsort.html
@@ -7,7 +7,7 @@
         <meta name="author" content="Yair Even-Or">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="../dist/tagify.css">
-        <script src="../dist/tagify..js"></script>
+        <script src="../dist/tagify.js"></script>
         <link rel="stylesheet" href="../../dragsort/dist/dragsort.css" media="print" onload="this.media='all'">
         <script src="../../dragsort/dist/dragsort.js"></script>
 
