--- a/test/test2.html
+++ b/test/test2.html
@@ -18,42 +18,42 @@
             form > section{ margin-bottom: 2em; }
 
             .tags-look .tagify__dropdown__item{
-  display: inline-block;
-  vertical-align: middle;
-  border-radius: 3px;
-  padding: .3em .5em;
-  border: 1px solid #CCC;
-  background: #F3F3F3;
-  margin: .2em;
-  font-size: .85em;
-  color: black;
-  transition: 0s;
-}
+                display: inline-block;
+                vertical-align: middle;
+                border-radius: 3px;
+                padding: .3em .5em;
+                border: 1px solid #CCC;
+                background: #F3F3F3;
+                margin: .2em;
+                font-size: .85em;
+                color: black;
+                transition: 0s;
+            }
 
-.tags-look .tagify__dropdown__item--active{
-  color: black;
-}
+            .tags-look .tagify__dropdown__item--active{
+                border-color: black;
+            }
 
-.tags-look .tagify__dropdown__item:hover{
-  background: lightyellow;
-  border-color: gold;
-}
+            .tags-look .tagify__dropdown__item:hover{
+                background: lightyellow;
+                border-color: gold;
+            }
 
-.tags-look .tagify__dropdown__item--hidden {
-    max-width: 0;
-    max-height: initial;
-    padding: .3em 0;
-    margin: .2em 0;
-    white-space: nowrap;
-    text-indent: -20px;
-    border: 0;
-}
+            .tags-look .tagify__dropdown__item--hidden {
+                max-width: 0;
+                max-height: initial;
+                padding: .3em 0;
+                margin: .2em 0;
+                white-space: nowrap;
+                text-indent: -20px;
+                border: 0;
+            }
         </style>
     </head>
 
     <body>
     <section>
-        <input value='1,2,3'>
+        <input classname='tags-look' value='1,2,3'>
     </section>
 
 <script>
