[chore] minor change in `index.html` demos file

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
           header.isSticky .repoLink{
             height: 50px;
-            margin: -.5em 0 -1.6em 0;
+            margin: -10px 0 -20px 0;
             transition: .55s cubic-bezier(.5,0,.5,1.075);
           }
 
@@ -128,7 +128,7 @@
 
          .repoLink{
             height: 70px;
-            margin: -1em 0 -1.5em 0;
+            margin: -10px 0 -30px 0;
             transform: translateX(calc(50vw - 50%));
             transition: .2s ease-out;
          }
