--- a/test/mix.html
+++ b/test/mix.html
@@ -72,6 +72,11 @@ var settings = {
         enabled: 0,
         position: "text"
     },
+
+    a11y: {
+        focusableTags: true
+    },
+
     whitelist: [
         {id: 100, value: "kenny", title: "Kenny McCormick"},
         {id: 101, value: "cartman", title: "Eric Cartman"},
