--- a/index.html
+++ b/index.html
@@ -2391,6 +2391,14 @@ function parseFullValue(value) {
         }
     })
 
+tagify.on('change', updatePlaceholderByTagsCount);
+
+function updatePlaceholderByTagsCount() {
+    tagify.setPlaceholder(`${tagify.value.length || 'no'} tags added`)
+}
+
+updatePlaceholderByTagsCount()
+
 // generate a random color (in HSL format, which I like to use)
 function getRandomColor(){
     function rand(min, max) {
@@ -2489,6 +2497,14 @@ tagify.on('dblclick', function(e){
             }
         }
     })
+
+tagify.on('change', updatePlaceholderByTagsCount);
+
+function updatePlaceholderByTagsCount() {
+    tagify.setPlaceholder(`${tagify.value.length || 'no'} tags added`)
+}
+
+updatePlaceholderByTagsCount()
 
 // generate a random color (in HSL format, which I like to use)
 function getRandomColor(){
