added `tagify-dd-text-color` to Knobs in the examples html page

--- a/index.html
+++ b/index.html
@@ -3714,6 +3714,11 @@ function onSelectFocus(e){
             },
 
             {
+                cssVar: ['tagify-dd-text-color', null, document.documentElement],
+                label: 'tagify-dd-text-color',
+                type: 'color',
+            },
+            {
                 cssVar: ['tagify-dd-bg-color', null, document.documentElement],
                 label: 'tagify-dd-bg-color',
                 type: 'color',
